--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,12 @@
   </head>
 
   <body>
-
-    <%= render "shared/navbar" %>
-    <%= yield %>
+    <div class="d-flex flex-column min-vh-100">
+      <%= render "shared/navbar" %>
+      <main class="flex-fill">
+        <%= yield %>
+      </main>
+      <%= render "shared/footer" %>
+    </div>
   </body>
 </html>
