--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,16 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1 class="home-title">Group Deals</h1>
+<p class="para">GroupDeals is a platform that allows users to subscribe to popular services, such as Netflix and Spotify, with shared accounts. Perfect for families, friends, or groups, GroupDeals helps you split the cost of subscriptions while enjoying premium services together from a single account. Save money, share benefits, and streamline your subscriptions with ease!</p>
+
+<%# <% CATEGORIES = ["music", "video", "TV", "sports", "gaming", "podcast", "audiobook"] %>
+
+<div class="container">
+  <ul id="categories">
+    <% @categories_with_images.each do |category, image_url| %>
+      <li>
+        <div class="card" style="background-image: url('<%= image_url %>');">
+          <a href="#" class="rrr" role="button"><%= category %></a>
+        </div>
+      </li>
+    <% end %>
+  </ul>
+</div>
