--- a/app/views/deals/new.html.erb
+++ b/app/views/deals/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Deals#new</h1>
-<p>Find me in app/views/deals/new.html.erb</p>
+<div>
+  <h1>Add a Deal</h1>
+  <%= simple_form_for @deal do |f| %>
+    <%= f.input :name %>
+    <%= f.input :price %>
+    <%= f.input :description %>
+    <%= f.select :category, options_for_select(["music", "video", "TV", "sports", "gaming", "podcast", "audiobook"]) %>
+    <%= f.input :duration %>
+    <%= f.input :number_of_users %>
+    <%= f.button :submit %>
+  <% end %>
+</div>
