--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -92,3 +92,10 @@ a.rrr {
   height: auto; /* Keep the aspect ratio of the images */
   border-radius: 12px; /* Optional: round corners for a smoother look */
 }
+
+.btn {
+  color: white;
+  .btn:hover {
+    color: red;
+  }
+}
