--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -1,11 +1,10 @@
-<h1 class="home-title">Deals for TV</h1>
-<p class="para">Stream your favorite movies, TV shows, and original series with Netflix. Join a group and share the binge-worthy entertainment!</p>
+<h1 class="home-title">Deals for <%= @category.capitalize %></h1>
 <div class="container">
   <ul id="subdeals">
-    <% @subdeals_with_images.each do |subdeal, image_url| %>
+    <% @deals.each do |deal| %>
       <li>
-        <div class="card" style="background-image: url('<%= image_url %>');">
-          <a href="#" class="rrr" role="button"><%= subdeal %></a>
+        <div class="card" style="background-image: url('<%= "https://i.pcmag.com/imagery/reviews/05cItXL96l4LE9n02WfDR0h-5.fit_scale.size_1028x578.v1582751026.png" %>');">
+          <a href="#" class="rrr" role="button"><%= deal.name %></a>
         </div>
       </li>
     <% end %>
