--- a/app/views/pages/manage.html.erb
+++ b/app/views/pages/manage.html.erb
@@ -1,40 +1,87 @@
 <h1>Manage Your Deals & Subscriptions</h1>
-<div class="d-flex">
-  <div class="card" style="width: 18rem;">
-    <div class="card-header">
-      <h2>Your Subscriptions</h2>
+<div class="subscriptions d-flex" >
+  <div class="sub-card" style="width: 18rem;">
+    <div class="sub-card-header">
+      <h2>Subscriptions On Pending</h2>
     </div>
-    <ul class="list-group list-group-flush">
+    <ul class="sub-list-group list-group-flush">
       <% @subscriptions.each do |subscription| %>
-        <% if subscription.approved == true %>
-          <li class="list-group-item"><%= subscription.deal.name %></li>
+        <% if subscription.checked == false %>
+          <li class="sub-list-group-item"><%= subscription.deal.name %></li>
         <% end %>
       <% end %>
     </ul>
   </div>
-  <div class="card" style="width: 18rem;">
-    <div class="card-header">
+  <div class="sub-card" style="width: 18rem;">
+    <div class="sub-card-header">
+      <h2>Your Subscriptions</h2>
+    </div>
+    <ul class="sub-list-group list-group-flush">
+      <% @subscriptions.each do |subscription| %>
+        <% if subscription.approved == true %>
+          <li class="sub-list-group-item"><%= subscription.deal.name %></li>
+        <% end %>
+      <% end %>
+    </ul>
+  </div>
+    <div class="sub-card" style="width: 18rem;">
+    <div class="sub-card-header">
+      <h2>Disapproved Subscriptions</h2>
+    </div>
+    <ul class="sub-list-group list-group-flush">
+      <% @subscriptions.each do |subscription| %>
+        <% if subscription.approved == false %>
+          <li class="sub-list-group-item"><%= subscription.deal.name %></li>
+        <% end %>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
+<div class="deals d-flex">
+  <div class="sub-card" style="width: 18rem;">
+    <div class="sub-card-header">
       <h2>Deals to Approve</h2>
     </div>
-    <ul class="list-group list-group-flush">
+    <ul class="sub-list-group list-group-flush">
       <% @deals.each do |deal| %>
         <% deal.subscriptions.each do |subscription| %>
           <% if subscription.checked == false %>
-            <li class="list-group-item"><%= deal.name %> - <%= link_to "Approve", subscription_path(subscription, approved: true), data: {turbo_method: :patch} %> <%= link_to "Disapprove", subscription_path(subscription, approved: false), data: {turbo_method: :patch} %></li>
+            <li class="sub-list-group-item">
+              <div>
+                <h5><%= deal.name %></h5>
+                <%= subscription.user.email %> - <%= link_to "Approve", subscription_path(subscription, approved: true), data: {turbo_method: :patch} %> <%= link_to "Disapprove", subscription_path(subscription, approved: false), data: {turbo_method: :patch} %>
+              </div>
+
+            </li>
           <% end %>
         <% end %>
       <% end %>
     </ul>
   </div>
-  <div class="card" style="width: 18rem;">
-    <div class="card-header">
+  <div class="sub-card" style="width: 18rem;">
+    <div class="sub-card-header">
       <h2>Approved Deals</h2>
     </div>
-    <ul class="list-group list-group-flush">
+    <ul class="sub-list-group list-group-flush">
       <% @deals.each do |deal| %>
         <% deal.subscriptions.each do |subscription| %>
           <% if subscription.approved == true %>
-            <li class="list-group-item"><%= deal.name %> - <%= subscription.user.email %></li>
+            <li class="sub-list-group-item"><%= deal.name %> - <%= subscription.user.email %></li>
+          <% end %>
+        <% end %>
+      <% end %>
+    </ul>
+  </div>
+  <div class="sub-card" style="width: 18rem;">
+    <div class="sub-card-header">
+      <h2>Disapproved Deals</h2>
+    </div>
+    <ul class="sub-list-group list-group-flush">
+      <% @deals.each do |deal| %>
+        <% deal.subscriptions.each do |subscription| %>
+          <% if subscription.approved == false %>
+            <li class="sub-list-group-item"><%= deal.name %> - <%= subscription.user.email %></li>
           <% end %>
         <% end %>
       <% end %>
