--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Deals#show</h1>
-<p>Find me in app/views/deals/show.html.erb</p>
+<div class="d-flex">
+  <div class="m-4">
+    <h1><%= @deal.name %></h1>
+    <p><%= @deal.description %></p>
+    <h4>Price Per Month: <%= @deal.price %> <i class="fa-solid fa-euro-sign"></i> </h4>
+  </div>
+  <div class="ms-auto d-flex flex-column m-4">
+    <img src="https://i.pcmag.com/imagery/reviews/05cItXL96l4LE9n02WfDR0h-5.fit_scale.size_1028x578.v1582751026.png" alt="" style="width: 800px">
+    <% if @deal.user != current_user %>
+      <%= link_to "Subscribe Now", deal_subscriptions_path(@deal), data: {turbo_method: :post}, class: "btn btn-primary mt-3" %>
+    <% end %>
+    <p>This is your deal</p>
+  </div>
+</div>
