--- a/app/views/pages/manage.html.erb
+++ b/app/views/pages/manage.html.erb
@@ -1,6 +1,6 @@
 <h1>Manage Your Deals & Subscriptions</h1>
 <div class="subscriptions d-flex" >
-  <div class="sub-card" style="width: 18rem;">
+  <div class="sub-card">
     <div class="sub-card-header">
       <h2>Subscriptions On Pending</h2>
     </div>
@@ -12,7 +12,7 @@
       <% end %>
     </ul>
   </div>
-  <div class="sub-card" style="width: 18rem;">
+  <div class="sub-card">
     <div class="sub-card-header">
       <h2>Your Subscriptions</h2>
     </div>
@@ -24,14 +24,14 @@
       <% end %>
     </ul>
   </div>
-    <div class="sub-card" style="width: 18rem;">
+    <div class="sub-card">
     <div class="sub-card-header">
       <h2>Disapproved Subscriptions</h2>
     </div>
     <ul class="sub-list-group list-group-flush">
       <% @subscriptions.each do |subscription| %>
         <% if subscription.approved == false %>
-          <li class="sub-list-group-item"><%= subscription.deal.name %></li>
+          <li class="sub-list-group-item"><%= subscription.deal.name %> by <%= subscription.deal.user.email %></li>
         <% end %>
       <% end %>
     </ul>
@@ -39,7 +39,7 @@
 </div>
 
 <div class="deals d-flex">
-  <div class="sub-card" style="width: 18rem;">
+  <div class="sub-card">
     <div class="sub-card-header">
       <h2>Deals to Approve</h2>
     </div>
@@ -48,41 +48,42 @@
         <% deal.subscriptions.each do |subscription| %>
           <% if subscription.checked == false %>
             <li class="sub-list-group-item">
-              <div>
-                <h5><%= deal.name %></h5>
-                <%= subscription.user.email %> - <%= link_to "Approve", subscription_path(subscription, approved: true), data: {turbo_method: :patch} %> <%= link_to "Disapprove", subscription_path(subscription, approved: false), data: {turbo_method: :patch} %>
+              <div class="d-flex">
+                <div>
+                  <h5><%= deal.name %></h5>
+                  <p><%= subscription.user.email %></p>
+                </div>
+                <div class="d-flex ms-auto align-items-center">
+                    <%= link_to "Approve", subscription_path(subscription, approved: true), data: {turbo_method: :patch}, class: "btn btn-outline-primary" %>
+                    <%= link_to "Disapprove", subscription_path(subscription, approved: false), data: {turbo_method: :patch}, class:"btn btn-outline-danger" %>
+                </div>
               </div>
-
             </li>
           <% end %>
         <% end %>
       <% end %>
     </ul>
   </div>
-  <div class="sub-card" style="width: 18rem;">
+  <div class="sub-card">
     <div class="sub-card-header">
       <h2>Approved Deals</h2>
     </div>
     <ul class="sub-list-group list-group-flush">
-      <% @deals.each do |deal| %>
-        <% deal.subscriptions.each do |subscription| %>
-          <% if subscription.approved == true %>
-            <li class="sub-list-group-item"><%= deal.name %> - <%= subscription.user.email %></li>
-          <% end %>
+      <% @received_subscriptions.each do |subscription| %>
+        <% if subscription.approved == true %>
+          <li class="sub-list-group-item"><%= deal.name %> - <%= subscription.user.email %></li>
         <% end %>
       <% end %>
     </ul>
   </div>
-  <div class="sub-card" style="width: 18rem;">
+  <div class="sub-card">
     <div class="sub-card-header">
       <h2>Disapproved Deals</h2>
     </div>
     <ul class="sub-list-group list-group-flush">
-      <% @deals.each do |deal| %>
-        <% deal.subscriptions.each do |subscription| %>
-          <% if subscription.approved == false %>
-            <li class="sub-list-group-item"><%= deal.name %> - <%= subscription.user.email %></li>
-          <% end %>
+      <% received_subscriptions.each do |subscription| %>
+        <% if subscription.approved == false %>
+          <li class="sub-list-group-item"><%= deal.name %> - <%= subscription.user.email %></li>
         <% end %>
       <% end %>
     </ul>
