--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,15 +2,12 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-6">
-        <%= link_to "#", class: "navbar-brand" do %>
-          <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-        <% end %>
-        <p class="mt-2">© 2024 Your Company Name</p>
+        <p class="mt-2" style="color: white">© 2024 Group Deal B.V.</p>
       </div>
       <div class="col-md-6 text-md-end">
         <ul class="list-unstyled">
           <li class="d-inline-block me-3">
-            <%= link_to "Home", "#", class: "nav-link d-inline p-0" %>
+            <%= link_to "Home", root_path, class: "nav-link d-inline p-0" %>
           </li>
           <li class="d-inline-block me-3">
             <%= link_to "About Us", "#", class: "nav-link d-inline p-0" %>
