--- a/app/views/pages/manage.html.erb
+++ b/app/views/pages/manage.html.erb
@@ -30,7 +30,7 @@
     </div>
     <ul class="sub-list-group list-group-flush">
       <% @subscriptions.each do |subscription| %>
-        <% if subscription.approved == false %>
+        <% if subscription.checked == true && subscription.approved == false %>
           <li class="sub-list-group-item"><%= subscription.deal.name %> by <%= subscription.deal.user.email %></li>
         <% end %>
       <% end %>
@@ -71,7 +71,7 @@
     <ul class="sub-list-group list-group-flush">
       <% @received_subscriptions.each do |subscription| %>
         <% if subscription.approved == true %>
-          <li class="sub-list-group-item"><%= deal.name %> - <%= subscription.user.email %></li>
+          <li class="sub-list-group-item"><%= subscription.deal.name %> - <%= subscription.user.email %></li>
         <% end %>
       <% end %>
     </ul>
@@ -81,9 +81,9 @@
       <h2>Disapproved Deals</h2>
     </div>
     <ul class="sub-list-group list-group-flush">
-      <% received_subscriptions.each do |subscription| %>
+      <% @received_subscriptions.each do |subscription| %>
         <% if subscription.approved == false %>
-          <li class="sub-list-group-item"><%= deal.name %> - <%= subscription.user.email %></li>
+          <li class="sub-list-group-item"><%= subscription.deal.name %> - <%= subscription.user.email %></li>
         <% end %>
       <% end %>
     </ul>
