--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -8,22 +8,8 @@
     <h4>Price Per Month: <%= "%.2f" % @deal.price %> <i class="fa-solid fa-euro-sign"></i></h4>
   </div>
   <div class="deal-media">
-    <% case @deal.category %>
-       <% when "music" %>
-        <img src="https://static.vecteezy.com/system/resources/previews/000/559/411/large_2x/vector-a-musical-symbol.jpg" alt="Music Deal">
-      <% when "video" %>
-        <img src="https://static.vecteezy.com/system/resources/previews/000/644/657/original/vector-video-icon-symbol-sign.jpg" alt="Video Deal">
-      <% when "TV" %>
-        <img src="https://static.vecteezy.com/system/resources/previews/010/157/977/non_2x/tv-icon-sign-symbol-design-free-png.png" alt="TV Deal">
-      <% when "sports" %>
-        <img src="https://static.vecteezy.com/system/resources/previews/000/348/985/original/vector-indoor-sport-game-athletic-set-icon-symbol-sign-pictogram.jpg" alt="Sports Deal">
-      <% when "gaming" %>
-        <img src="https://static.vecteezy.com/system/resources/previews/000/366/871/original/video-game-vector-icon.jpg" alt="Gaming Deal">
-      <% when "podcast" %>
-        <img src="https://static.vecteezy.com/system/resources/previews/002/157/611/original/illustrations-concept-design-podcast-channel-free-vector.jpg" alt="Podcast Deal">
-      <% when "audiobook" %>
-        <img src="https://cdn-icons-png.flaticon.com/512/865/865552.png" alt="Audiobook Deal">
-    <% end %>
+        <img src=<%= @deal.image_path %> alt="Deal image">
+
     <% if @deal.user != current_user && @deal != @user_deal %>
       <%= link_to "Subscribe Now", deal_subscriptions_path(@deal), data: {turbo_method: :post}, class: "btn subscribe-btn" %>
     <% elsif @deal == @user_deal %>
