--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -1,5 +1,5 @@
-<div class="dealcc">
-  <div class="deal-wrapper">
+<div class="deal-c">
+<div class="deal-wrapper">
   <div class="deal-info">
     <h1><%= @deal.name %></h1>
     <p>Duration: <%= @deal.duration %></p>
