--- a/app/views/pages/manage.html.erb
+++ b/app/views/pages/manage.html.erb
@@ -7,7 +7,7 @@
     <ul class="sub-list-group list-group-flush">
       <% @subscriptions.each do |subscription| %>
         <% if subscription.checked == false %>
-          <li class="sub-list-group-item"><%= subscription.deal.name %></li>
+          <li class="sub-list-group-item"><%= link_to subscription.deal.name, deal_path(subscription.deal), style: "color: black;" %></li>
         <% end %>
       <% end %>
     </ul>
@@ -19,7 +19,7 @@
     <ul class="sub-list-group list-group-flush">
       <% @subscriptions.each do |subscription| %>
         <% if subscription.approved == true %>
-          <li class="sub-list-group-item"><%= subscription.deal.name %></li>
+          <li class="sub-list-group-item"><%= link_to subscription.deal.name, deal_path(subscription.deal), style: "color: black;" %></li>
         <% end %>
       <% end %>
     </ul>
@@ -31,7 +31,7 @@
     <ul class="sub-list-group list-group-flush">
       <% @subscriptions.each do |subscription| %>
         <% if subscription.checked == true && subscription.approved == false %>
-          <li class="sub-list-group-item"><%= subscription.deal.name %> by <%= subscription.deal.user.email %></li>
+          <li class="sub-list-group-item"><%= link_to subscription.deal.name, deal_path(subscription.deal), style: "color: black;" %> by <%= subscription.deal.user.email %></li>
         <% end %>
       <% end %>
     </ul>
@@ -44,22 +44,20 @@
       <h2>Deals to Approve</h2>
     </div>
     <ul class="sub-list-group list-group-flush">
-      <% @deals.each do |deal| %>
-        <% deal.subscriptions.each do |subscription| %>
-          <% if subscription.checked == false %>
-            <li class="sub-list-group-item">
-              <div class="d-flex">
-                <div>
-                  <h5><%= deal.name %></h5>
-                  <p><%= subscription.user.email %></p>
-                </div>
-                <div class="d-flex ms-auto align-items-center">
-                    <%= link_to "Approve", subscription_path(subscription, approved: true), data: {turbo_method: :patch}, class: "btn btn-outline-primary" %>
-                    <%= link_to "Disapprove", subscription_path(subscription, approved: false), data: {turbo_method: :patch}, class:"btn btn-outline-danger" %>
-                </div>
+      <% @received_subscriptions.each do |subscription| %>
+        <% if subscription.checked == false %>
+          <li class="sub-list-group-item">
+            <div class="d-flex">
+              <div>
+                <h5><%= link_to subscription.deal.name, deal_path(subscription.deal), style: "color: black;" %></h5>
+                <p><%= subscription.user.email %></p>
               </div>
-            </li>
-          <% end %>
+              <div class="d-flex ms-auto align-items-center">
+                  <%= link_to "Approve", subscription_path(subscription, approved: true), data: {turbo_method: :patch}, class: "btn btn-outline-primary" %>
+                  <%= link_to "Disapprove", subscription_path(subscription, approved: false), data: {turbo_method: :patch}, class:"btn btn-outline-danger" %>
+              </div>
+            </div>
+          </li>
         <% end %>
       <% end %>
     </ul>
@@ -71,7 +69,7 @@
     <ul class="sub-list-group list-group-flush">
       <% @received_subscriptions.each do |subscription| %>
         <% if subscription.approved == true %>
-          <li class="sub-list-group-item"><%= subscription.deal.name %> - <%= subscription.user.email %></li>
+          <li class="sub-list-group-item"><%= link_to subscription.deal.name, deal_path(subscription.deal), style: "color: black;" %> - <%= subscription.user.email %></li>
         <% end %>
       <% end %>
     </ul>
@@ -83,7 +81,7 @@
     <ul class="sub-list-group list-group-flush">
       <% @received_subscriptions.each do |subscription| %>
         <% if subscription.approved == false %>
-          <li class="sub-list-group-item"><%= subscription.deal.name %> - <%= subscription.user.email %></li>
+          <li class="sub-list-group-item"><%= link_to subscription.deal.name, deal_path(subscription.deal), style: "color: black;" %> - <%= subscription.user.email %></li>
         <% end %>
       <% end %>
     </ul>
