--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container d-flex flex-column">
+<div class="logincontainer d-flex flex-column">
   <div class="mb-5">
     <h1 class="home-title">Deals for <%= @category.capitalize %></h1>
   </div>
