--- a/app/views/pages/manage.html.erb
+++ b/app/views/pages/manage.html.erb
@@ -1,89 +1,116 @@
-<h1>Manage Your Deals & Subscriptions</h1>
-<div class="subscriptions d-flex" >
-  <div class="sub-card">
-    <div class="sub-card-header">
-      <h2>Subscriptions On Pending</h2>
-    </div>
-    <ul class="sub-list-group list-group-flush">
-      <% @subscriptions.each do |subscription| %>
-        <% if subscription.checked == false %>
-          <li class="sub-list-group-item"><%= link_to subscription.deal.name, deal_path(subscription.deal), style: "color: black;" %></li>
-        <% end %>
-      <% end %>
-    </ul>
-  </div>
-  <div class="sub-card">
-    <div class="sub-card-header">
-      <h2>Your Subscriptions</h2>
-    </div>
-    <ul class="sub-list-group list-group-flush">
-      <% @subscriptions.each do |subscription| %>
-        <% if subscription.approved == true %>
-          <li class="sub-list-group-item"><%= link_to subscription.deal.name, deal_path(subscription.deal), style: "color: black;" %></li>
-        <% end %>
-      <% end %>
-    </ul>
-  </div>
+<div style="margin-top: 1%;">
+  <h1>Manage Your Deals & Subscriptions</h1>
+  <div class="subscriptions d-flex" >
     <div class="sub-card">
-    <div class="sub-card-header">
-      <h2>Disapproved Subscriptions</h2>
-    </div>
-    <ul class="sub-list-group list-group-flush">
-      <% @subscriptions.each do |subscription| %>
-        <% if subscription.checked == true && subscription.approved == false %>
-          <li class="sub-list-group-item"><%= link_to subscription.deal.name, deal_path(subscription.deal), style: "color: black;" %> by <%= subscription.deal.user.email %></li>
+      <div class="sub-card-header">
+        <h2>Subscriptions On Pending</h2>
+      </div>
+      <ul class="sub-list-group list-group-flush">
+        <% if @subscriptions.length.positive? %>
+          <% @subscriptions.each do |subscription| %>
+            <% if subscription.checked == false %>
+              <li class="sub-list-group-item"><%= link_to subscription.deal.name, deal_path(subscription.deal), class: "links" %> | Host: <%= subscription.deal.user.email %></li>
+            <% end %>
+          <% end %>
+        <% else %>
+          <li class="sub-list-group-item">There is no items</li>
         <% end %>
-      <% end %>
-    </ul>
+      </ul>
+    </div>
+    <div class="sub-card">
+      <div class="sub-card-header">
+        <h2>Your Subscriptions</h2>
+      </div>
+      <ul class="sub-list-group list-group-flush">
+        <% if @subscriptions.length.positive? %>
+          <% @subscriptions.each do |subscription| %>
+            <% if subscription.approved == true %>
+              <li class="sub-list-group-item"><%= link_to subscription.deal.name, deal_path(subscription.deal), class: "links" %></li>
+            <% end %>
+          <% end %>
+        <% else %>
+          <li class="sub-list-group-item">There is no items</li>
+        <% end %>
+      </ul>
+    </div>
+      <div class="sub-card">
+      <div class="sub-card-header">
+        <h2>Disapproved Subscriptions</h2>
+      </div>
+      <ul class="sub-list-group list-group-flush">
+        <% if @subscriptions.length.positive? %>
+          <% @subscriptions.each do |subscription| %>
+            <% if subscription.checked == true && subscription.approved == false %>
+              <li class="sub-list-group-item"><%= link_to subscription.deal.name, deal_path(subscription.deal), class: "links" %> by <%= subscription.deal.user.email %></li>
+            <% end %>
+          <% end %>
+        <% else %>
+          <li class="sub-list-group-item">There is no items</li>
+        <% end %>
+      </ul>
+    </div>
   </div>
-</div>
 
-<div class="deals d-flex">
-  <div class="sub-card">
-    <div class="sub-card-header">
-      <h2>Deals to Approve</h2>
-    </div>
-    <ul class="sub-list-group list-group-flush">
-      <% @received_subscriptions.each do |subscription| %>
-        <% if subscription.checked == false %>
-          <li class="sub-list-group-item">
-            <div class="d-flex">
-              <div>
-                <h5><%= link_to subscription.deal.name, deal_path(subscription.deal), style: "color: black;" %></h5>
-                <p><%= subscription.user.email %></p>
-              </div>
-              <div class="d-flex ms-auto align-items-center">
-                  <%= link_to "Approve", subscription_path(subscription, approved: true), data: {turbo_method: :patch}, class: "btn btn-outline-primary" %>
-                  <%= link_to "Disapprove", subscription_path(subscription, approved: false), data: {turbo_method: :patch}, class:"btn btn-outline-danger" %>
-              </div>
-            </div>
-          </li>
+  <div class="deals d-flex">
+    <div class="sub-card">
+      <div class="sub-card-header">
+        <h2>Deals to Approve</h2>
+      </div>
+      <ul class="sub-list-group list-group-flush">
+        <% if @received_subscriptions.length.positive? %>
+          <% @received_subscriptions.each do |subscription| %>
+            <% if subscription.checked == false %>
+              <li class="sub-list-group-item">
+                <div class="d-flex">
+                  <div>
+                    <h5><%= link_to subscription.deal.name, deal_path(subscription.deal), class: "links" %></h5>
+                    <p><%= subscription.user.email %></p>
+                  </div>
+                  <div class="d-flex ms-auto flex-column">
+                      <%= link_to "Approve", subscription_path(subscription, approved: true), data: {turbo_method: :patch}, class: "subscribe-btn" %>
+                      <%= link_to "Disapprove", subscription_path(subscription, approved: false), data: {turbo_method: :patch}, class:"danger-btn" %>
+                  </div>
+                </div>
+              </li>
+            <% end %>
+          <% end %>
+        <% else %>
+          <li class="sub-list-group-item">There is no items</li>
         <% end %>
-      <% end %>
-    </ul>
-  </div>
-  <div class="sub-card">
-    <div class="sub-card-header">
-      <h2>Approved Deals</h2>
+      </ul>
     </div>
-    <ul class="sub-list-group list-group-flush">
-      <% @received_subscriptions.each do |subscription| %>
-        <% if subscription.approved == true %>
-          <li class="sub-list-group-item"><%= link_to subscription.deal.name, deal_path(subscription.deal), style: "color: black;" %> - <%= subscription.user.email %></li>
+    <div class="sub-card">
+      <div class="sub-card-header">
+        <h2>Approved Deals</h2>
+      </div>
+      <ul class="sub-list-group list-group-flush">
+        <% if @received_subscriptions.length.positive? %>
+          <% @received_subscriptions.each do |subscription| %>
+            <% if subscription.approved == true %>
+              <li class="sub-list-group-item"><%= link_to subscription.deal.name, deal_path(subscription.deal), class: "links" %> - <%= subscription.user.email %></li>
+            <% end %>
+          <% end %>
+        <% else %>
+          <li class="sub-list-group-item">There is no items</li>
         <% end %>
-      <% end %>
-    </ul>
-  </div>
-  <div class="sub-card">
-    <div class="sub-card-header">
-      <h2>Disapproved Deals</h2>
+
+      </ul>
     </div>
-    <ul class="sub-list-group list-group-flush">
-      <% @received_subscriptions.each do |subscription| %>
-        <% if subscription.approved == false %>
-          <li class="sub-list-group-item"><%= link_to subscription.deal.name, deal_path(subscription.deal), style: "color: black;" %> - <%= subscription.user.email %></li>
+    <div class="sub-card">
+      <div class="sub-card-header">
+        <h2>Disapproved Deals</h2>
+      </div>
+      <ul class="sub-list-group list-group-flush">
+        <% if @received_subscriptions.length.positive? %>
+          <% @received_subscriptions.each do |subscription| %>
+            <% if subscription.approved == false %>
+              <li class="sub-list-group-item"><%= link_to subscription.deal.name, deal_path(subscription.deal), class: "links" %> - <%= subscription.user.email %></li>
+            <% end %>
+          <% end %>
+        <% else %>
+          <li class="sub-list-group-item">There is no items</li>
         <% end %>
-      <% end %>
-    </ul>
+      </ul>
+    </div>
   </div>
 </div>
