code so far 16:15PM

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,7 +4,8 @@
   justify-content: space-between; /* Spreads items across the container */
   padding: 20px; /* Adds padding around the container */
   width: 100%; /* Full width for the container */
-  box-sizing: border-box; /* Ensure padding is included in the total width */
+  box-sizing: border-box;
+  margin-top: 3%;/* Ensure padding is included in the total width */
 }
 
 #categories {
@@ -128,7 +129,6 @@ a {
 .banner {
   background-image: asset-url("banner-background");
   background-size: auto;
-  height: 350px;
   margin: 0;
 }
 
